# wargames_training

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
CHANGELOG/: index.html
ENVIRONMENT_SPEC/: index.html
ORCHESTRATION_RUNBOOK/: index.html
PROJECTS_V2_IMPLEMENTATION_SUMMARY/: index.html
PROJECTS_V2_INTEGRATION_INDEX/: index.html
PROJECTS_V2_QUICK_REFERENCE/: index.html
PROJECTS_V2_TESTING_CHECKLIST/: index.html
PROJECTS_V2_TESTING_GUIDE/: index.html
PROJECT_REPORT/: index.html
ROADMAP/: index.html
TRAINING_GUIDE/: index.html
agent-artifacts/: run-report.json  run-report.md
analysis/: __init__.py  coa_generator.py  saliency.py
api/: __init__.py  coa_endpoint.py  index.html
benchmarks/: __init__.py  wargames_bench.py
configs/: curriculum_2v2.yaml  default.yaml  experiment_1.yaml  experiment_brigade.yaml  experiment_division.yaml  experiment_mappo_2v2.yaml  human_play.yaml  orchestration.yaml  self_play.yaml  wfm1_train.yaml
deployment_guide/: index.html
development_playbook/: index.html
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENVIRONMENT_SPEC.md  ORCHESTRATION_RUNBOOK.md  PROJECTS_V2_IMPLEMENTATION_SUMMARY.md  PROJECTS_V2_INTEGRATION_INDEX.md  PROJECTS_V2_QUICK_REFERENCE.md  PROJECTS_V2_TESTING_CHECKLIST.md  PROJECTS_V2_TESTING_GUIDE.md  PROJECT_REPORT.md  ROADMAP.md  TRAINING_GUIDE.md  deployment_guide.md  development_playbook.md  historical_benchmark.md  historical_scenarios.md  hrl_architecture.md  hrl_training_protocol.md  index.md  league_training_guide.md  metrics_reference.md  model_configs.md  multi_agent_guide.md  observation_reference.md  scaling_notes.md  v2_architecture.md  v4_architecture.md  wargames_bench_leaderboard.md
envs/: __init__.py  artillery_corps_env.py  battalion_env.py  brigade_env.py  cavalry_corps_env.py  corps_env.py  division_env.py  human_env.py  multi_battalion_env.py  options.py  remote_multi_battalion_env.py  reward.py  smdp_wrapper.py
frontend/: README.md  index.html  package.json  vite.config.js
historical_benchmark/: index.html
historical_scenarios/: index.html
hrl_architecture/: index.html
hrl_training_protocol/: index.html
league_training_guide/: index.html
metrics_reference/: index.html
model_configs/: index.html
models/: __init__.py  entity_encoder.py  mappo_policy.py  mlp_policy.py  recurrent_policy.py  transformer_policy.py  wfm1.py
multi_agent_guide/: index.html
notebooks/: 01_env_debug.ipynb  coa_analysis.ipynb  explainability_demo.ipynb  historical_validation.ipynb  v2_coordination_analysis.ipynb  v3_hrl_analysis.ipynb  v4_diversity_analysis.ipynb
scripts/: play.py  (+2 more)
(+329 files in other folders)
