[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wargames-training"
version = "1.0.0"
description = "Reinforcement learning research platform for Napoleonic-era battalion simulation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Wargames Training Contributors" }
]
keywords = [
    "reinforcement-learning",
    "wargames",
    "military-simulation",
    "multi-agent",
    "gymnasium",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "stable-baselines3>=2.3.0",
    "gymnasium>=0.29.0",
    "pettingzoo>=1.24.0",
    "wandb>=0.17.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "pygame>=2.5.0",
    "pyyaml>=6.0",
    "hydra-core>=1.3.0",
    "flask>=3.0.0",
    "websockets>=12.0",
    "PyGithub>=2.3.0",
    "openai>=1.30.0",
]

[project.optional-dependencies]
distributed = ["ray[rllib]>=2.9.0"]
export = ["onnx>=1.16.0", "onnxruntime>=1.18.0"]
saliency = ["shap>=0.44.0"]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
all = [
    "ray[rllib]>=2.9.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.18.0",
    "shap>=0.44.0",
]

[project.urls]
Homepage = "https://github.com/B9android/wargames_training"
Documentation = "https://b9android.github.io/wargames_training"
Repository = "https://github.com/B9android/wargames_training"
Issues = "https://github.com/B9android/wargames_training/issues"

[project.scripts]
wargames-bench = "benchmarks.wargames_bench:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "envs*",
    "models*",
    "training*",
    "analysis*",
    "benchmarks*",
    "server*",
    "api*",
    "configs*",
]

[tool.setuptools.package-data]
# Include YAML configs shipped alongside the Python packages.
# Note: `configs/` is not a Python package; the training scripts discover
# it at runtime via `_PROJECT_ROOT / "configs"`.  For an editable/source
# install this works automatically.  Wheel users should install from source
# or use `importlib.resources` via a future configs package.
"*" = ["configs/**/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
